set(includedirs src/)
set(srcs )
set(srcs_dir src/)
set(priv_includes) #cores/esp32/libb64)
set(requires arduino) #spi_flash mbedtls mdns esp_adc_cal wifi_provisioning nghttp wpa_supplicant)
set(priv_requires) #fatfs nvs_flash app_update spiffs bootloader_support openssl bt esp_ipc esp_hid)

idf_component_register(INCLUDE_DIRS ${includedirs} PRIV_INCLUDE_DIRS ${priv_includes} SRCS ${srcs} SRC_DIRS ${src_dirs} REQUIRES ${requires} PRIV_REQUIRES ${priv_requires})
    